--- a/Makefile.am
+++ b/Makefile.am
@@ -53,7 +53,7 @@ bin_optirun_SOURCES = src/module.c src/bbconfig.c src/bblogger.c src/bbrun.c \
 bin_optirun_LDADD = ${glib_LIBS} -lrt
 bin_bumblebeed_SOURCES = src/pci.c src/bbconfig.c src/bblogger.c src/bbrun.c \
 	src/bbsocket.c src/module.c src/bbsecondary.c src/switch/switching.c \
-	src/switch/sw_bbswitch.c src/switch/sw_switcheroo.c \
+	src/switch/sw_bbswitch.c src/switch/sw_switcheroo.c src/switch/sw_linux_native.c \
 	src/driver.c src/bumblebeed.c
 bin_bumblebeed_LDADD = ${x11_LIBS} ${libbsd_LIBS} ${glib_LIBS} -lrt
 
